rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__server__tests__playback_state_encode_did_seek.snap
---
source: rust/foxglove/src/protocol/v2/server.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x05,
    0x00,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
]
