rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__server__tests__pong_encode_empty_payload.snap
---
source: rust/foxglove/src/protocol/v2/server.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x06,
]
